force-app/main/default/objects/Candidate__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BE/B.Tech- Bachelor of Technology</fullName>
            </value>
            <value>
                <fullName>B.Arch- Bachelor of Architecture</fullName>
            </value>
            <value>
                <fullName>BCA- Bachelor of Computer Applications</fullName>
            </value>
            <value>
                <fullName>B.Sc.- Information Technology</fullName>
            </value>
            <value>
                <fullName>B.Sc- Nursing</fullName>
            </value>
            <value>
                <fullName>BPharma- Bachelor of Pharmacy</fullName>
            </value>
            <value>
                <fullName>B.Sc- Interior Design</fullName>
            </value>
            <value>
                <fullName>BDS- Bachelor of Dental Surgery</fullName>
            </value>
            <value>
                <fullName>Animation, Graphics and Multimedia</fullName>
            </value>
            <value>
                <fullName>B.Sc. – Nutrition &amp; Dietetics</fullName>
            </value>
            <value>
                <fullName>BPT- Bachelor of Physiotherapy</fullName>
            </value>
            <value>
                <fullName>B.Sc- Applied Geology</fullName>
            </value>
            <value>
                <fullName>BA/B.Sc. Liberal Arts</fullName>
            </value>
            <value>
                <fullName>B.Sc.- Physics</fullName>
            </value>
            <value>
                <fullName>B.Sc. Chemistry</fullName>
            </value>
            <value>
                <fullName>B.Sc. Mathematics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>