force-app/main/default/objects/Candidate__c/listViews/Non_Employed_Candidate.listView-meta.xml
<ListView>
    <fullName>Non_Employed_Candidate</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Currently_Employed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Non Employed Candidate</label>
</ListView>